fix: revert dynamic player height measurement, use static 77px to fix collapse/expand toggle

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -72,7 +72,7 @@
   --color-primary-40: hsla(9, 59%, 46%, 0.4);
 
   /* Player bar */
-  --player-bar-height: 80px;
+  --player-bar-height: 77px;
   --character-tabs-bottom: 0px;
 
   /* Border radius */
